# decomposition_library

./: .gitignore  CMakeLists.txt  DecompositionConfig.cmake.in  LICENSE  README.md
.github/workflows/: build.yml  docs.yml
docs/: contributing.md  examples.md  how-it-works.md  index.md  integration.md  references.md
docs/contributing/: collaborators-and-contributors.md
docs/examples/: executing-an-decomposition-method.md  implementing-an-optimization-problem.md
docs/how-it-works/: decomposition-methods.md  static-decomposition-methods.md
docs/integration/: dependencies.md
examples/: CMakeLists.txt  cooperative_coevolution_random_solver.cpp  differential_grouping_default_options.cpp  differential_grouping_setting_parameter.cpp
experiments/: CMakeLists.txt  differential_evolution_cooperative_coevolutive.cpp  differential_evolution_cooperative_coevolutive.h  experiments_de_cc.cpp
experiments/decomposition_solutions/DG/: F10_DG.txt  F11_DG.txt  F12_DG.txt  F13_DG.txt  F14_DG.txt  F15_DG.txt  F1_DG.txt  F2_DG.txt  F3_DG.txt  F4_DG.txt  F5_DG.txt  F6_DG.txt  F7_DG.txt  F8_DG.txt  F9_DG.txt
experiments/decomposition_solutions/DG2/: F10_DG2.txt  F11_DG2.txt  F12_DG2.txt  F13_DG2.txt  F14_DG2.txt  F15_DG2.txt  F1_DG2.txt  F2_DG2.txt  F3_DG2.txt  F4_DG2.txt  F5_DG2.txt  F6_DG2.txt  F7_DG2.txt  F8_DG2.txt  F9_DG2.txt
experiments/decomposition_solutions/FII/: F10_FII.txt  F11_FII.txt  F12_FII.txt  F13_FII.txt  F14_FII.txt  F15_FII.txt  F1_FII.txt  F2_FII.txt  F3_FII.txt  F4_FII.txt  F5_FII.txt  F6_FII.txt  F7_FII.txt  F8_FII.txt  F9_FII.txt
experiments/decomposition_solutions/GDG/: F10_GDG.txt  F11_GDG.txt  F12_GDG.txt  F13_GDG.txt  F14_GDG.txt  F15_GDG.txt  F1_GDG.txt  F2_GDG.txt  F3_GDG.txt  F4_GDG.txt  F5_GDG.txt  F6_GDG.txt  F7_GDG.txt  F8_GDG.txt  F9_GDG.txt
experiments/decomposition_solutions/RDG/: F10_RDG.txt  F11_RDG.txt  F12_RDG.txt  F13_RDG.txt  F14_RDG.txt  F15_RDG.txt  F1_RDG.txt  F2_RDG.txt  F3_RDG.txt  F4_RDG.txt  F5_RDG.txt  F6_RDG.txt  F7_RDG.txt  F8_RDG.txt  F9_RDG.txt
experiments/decomposition_solutions/RDG2/: F10_RDG2.txt  F11_RDG2.txt  F12_RDG2.txt  F13_RDG2.txt  F14_RDG2.txt  F15_RDG2.txt  F1_RDG2.txt  F2_RDG2.txt  F3_RDG2.txt  F4_RDG2.txt  F5_RDG2.txt  F6_RDG2.txt  F7_RDG2.txt  F8_RDG2.txt  F9_RDG2.txt
experiments/decomposition_solutions/RDG3/: F10_RDG3.txt  F11_RDG3.txt  F12_RDG3.txt  F13_RDG3.txt  F14_RDG3.txt  F1_RDG3.txt  F2_RDG3.txt  F3_RDG3.txt  F4_RDG3.txt  F5_RDG3.txt  F6_RDG3.txt  F7_RDG3.txt  F8_RDG3.txt  F9_RDG3.txt
experiments/decomposition_solutions/XDG/: F10_XDG.txt  F11_XDG.txt  F12_XDG.txt  F13_XDG.txt  F14_XDG.txt  F15_XDG.txt  F1_XDG.txt  F2_XDG.txt  F3_XDG.txt  F4_XDG.txt  F5_XDG.txt  F6_XDG.txt  F7_XDG.txt  F8_XDG.txt  F9_XDG.txt
experiments/problems/: f10_cec.h  f11_cec.h  f12_cec.h  f13_cec.h  f14_cec.h  f15_cec.h  f1_cec.h  f2_cec.h  f3_cec.h  f4_cec.h  f5_cec.h  f6_cec.h  f7_cec.h  f8_cec.h  f9_cec.h
include/: common.h  decomposition.h  differential_grouping_2_method.h  differential_grouping_method.h  extended_differential_grouping_method.h  fast_interdependency_identification_method.h  global_differential_grouping_method.h  problem.h  recursive_differential_grouping_1_method.h  recursive_differential_grouping_2_method.h  recursive_differential_grouping_3_method.h
source/: CMakeLists.txt
source/decomposition/: common.cpp  common.h  decomposition.h  decomposition_algorithm.h  differential_grouping.cpp  differential_grouping.h  differential_grouping_2.cpp  differential_grouping_2.h  differential_grouping_2_method.cpp  differential_grouping_2_method.h  differential_grouping_method.cpp  differential_grouping_method.h  extended_differential_grouping.cpp  extended_differential_grouping.h  extended_differential_grouping_method.cpp  extended_differential_grouping_method.h  fast_interdependency_identification.cpp  fast_interdependency_identification.h  fast_interdependency_identification_method.cpp  fast_interdependency_identification_method.h  global_differential_grouping.cpp  global_differential_grouping.h  global_differential_grouping_method.cpp  global_differential_grouping_method.h  optimization_problem.cpp  optimization_problem.h  problem.cpp  problem.h  recursive_differential_grouping_1.cpp  recursive_differential_grouping_1.h  recursive_differential_grouping_1_method.cpp  recursive_differential_grouping_1_method.h  recursive_differential_grouping_2.cpp  recursive_differential_grouping_2.h  recursive_differential_grouping_2_method.cpp  recursive_differential_grouping_2_method.h  recursive_differential_grouping_3.cpp  recursive_differential_grouping_3.h  recursive_differential_grouping_3_method.cpp  recursive_differential_grouping_3_method.h  (+2 more)
src/: CMakeLists.txt  extended_differential_grouping_method.cpp  recursive_differential_grouping_1_method.cpp  recursive_differential_grouping_2_method.cpp
unit_tests/: CMakeLists.txt  differential_grouping_2_test.cpp  differential_grouping_test.cpp  extended_differential_grouping_test.cpp  fast_interdependency_identification_test.cpp  global_differential_grouping_test.cpp  recursive_differential_grouping_1_test.cpp  recursive_differential_grouping_2_test.cpp  recursive_differential_grouping_3_test.cpp
unit_tests/problem_examples/: problem_example_1.h  problem_example_2.h  problem_example_3.h  problem_example_4.h
